--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,7 @@ footer {
 }
 
 @media (max-width: 500px) {
-	a.title {
-		font-size: 2rem;
-	}
+
 
 	/* FOOTER */
 	footer {
